2. Трекер SQL [#1734 #446303]